vertically align dropdown trigger to fix firefox bug (#93)

--- a/blocks-styles/dropdowns.styl
+++ b/blocks-styles/dropdowns.styl
@@ -12,6 +12,7 @@
 
 .blx-dropdown-trigger {
   display: flex;
+  align-items: center;
   position: relative;
   height: 40px;
   border-radius: $base-border-radius;
