--- a/blocks.css
+++ b/blocks.css
@@ -1085,6 +1085,7 @@ a.blx-button {
 }
 .blx-dropdown-trigger {
   display: flex;
+  align-items: center;
   position: relative;
   height: 40px;
   border-radius: 7px;
